Spring changelog
(since 85.0: "!" prefix indicate backward compatibility broke)
(numbers in brackets normally mean the mantis ticket ID)

-- 102.0 --------------------------------------------------------
General:
 - compress creg save files

Sim:
 - COB: deprecate unit/team/allyteam/global vars. Use lua functions instead.

-- 101.0 --------------------------------------------------------
Major:
 - LoS (sim) overhaul
 - SSMF Splat Detail Normal Textures (by Beherith)
 - many new Lua rendering related features (custom feature shaders, map shaders, ...)
 - many Lua additions
 - Lua pr-downloader API
 - removal of airbases & fuel
 - transport overhaul
 - 64bit windows builds

General:
 ! change default screenshot file type to jpg. to create png use /screenshot png
 ! pr-downloader dependency is now mandatory (statically linked with spring)
 ! demo files are now compressed with gzip (and the suffix is .sdfz)
 - improve data locality even further with respect to 100.0
 - fix memory leaks and misc. crashes (some related to LoadingMT)
 - ignore /give commands issued via autohost interface (needs an actual player)

LoS:
 ! ModInfo: remove losMul & airLosMul -> always handle los ranges in elmos in the _whole_ engine
   WARNING: this also rescales the returned values in Lua UnitDefs!
 ! ModInfo: make `radarMipLevel` configurable
 ! change default airMipLevel 2->1 & radarMipLevel 3->2
 ! ModInfo: add new sensors.alwaysVisibleOverridesCloaked (default _off_! before was always on)
 ! modrules.lua: add new `separateJammers` tag (breaks backward compatibility!)
   default true (old behaviour is false)
   when enabled each allyTeam only jams their own units
 ! get rid of los radius limit (you can now create units that cover the whole map and more)
 - speed ups in general
 - reduced lags introduced by LoS
 - multithread LoS updating
 - reduced memory usage
 ! fix various bugs related to unit/feature movement not registered
 ! update LoS on terrain changes